Fix font-size on mobile

--- a/content/themes/dude/sass/variables/_font-size.scss
+++ b/content/themes/dude/sass/variables/_font-size.scss
@@ -97,10 +97,11 @@
     --font-size-34: 23px;
     --font-size-28: 20px;
     --font-size-26: 18px;
-    --font-size-paragraph: 16px;
+    --font-size-paragraph: 18px;
     --font-size-18: 16px;
-    --font-size-19: 16px;
+    --font-size-19: 17px;
     --font-size-24: 22px;
+    --font-size-20: 17px;
     --font-size-22: 18px;
   }
 
